--- a/JavaRushPlugin.properties
+++ b/JavaRushPlugin.properties
@@ -1,8 +1,8 @@
-#Thu Oct 19 21:55:34 EEST 2017
+#Sun Oct 22 13:40:03 EEST 2017
 javarush.query.filter=
 javarush.quest.filter=QUEST_JAVA_MULTITHREADING
 javarush.status.filter=ASSIGNED
-javarush.last.task.key=com.javarush.task.task23.task2311
-javarush.last.task.path=/home/rusiashka/JavaRushTasks/3.JavaMultithreading/src/com/javarush/task/task23/task2311
+javarush.last.task.key=com.javarush.task.task36.task3608.big07
+javarush.last.task.path=/home/rusiashka/JavaRushTasks/3.JavaMultithreading/src/com/javarush/task/task36/task3608
 javarush.user.secretkey=1ad56544-0337-4989-9f61-a48066ee067c
-javarush.level.filter=THREE
+javarush.level.filter=FOUR
