--- a/JavaRushPlugin.properties
+++ b/JavaRushPlugin.properties
@@ -1,8 +1,8 @@
-#Mon Oct 23 13:51:47 EEST 2017
+#Wed Oct 25 15:29:45 EEST 2017
 javarush.query.filter=
-javarush.quest.filter=QUEST_JAVA_MULTITHREADING
-javarush.status.filter=ANY
-javarush.last.task.key=com.javarush.task.task25.task2502
+javarush.quest.filter=QUEST_JAVA_COLLECTIONS
+javarush.status.filter=ASSIGNED
+javarush.last.task.key=com.javarush.task.task31.task3111
+javarush.last.task.path=C\:/Users/Rusiashka/IdeaProjects/JavaRushTasks/4.JavaCollections/src/com/javarush/task/task31/task3111
 javarush.user.secretkey=1ad56544-0337-4989-9f61-a48066ee067c
-javarush.last.task.path=C\:/Users/Rusiashka/IdeaProjects/JavaRushTasks/3.JavaMultithreading/src/com/javarush/task/task25/task2502
-javarush.level.filter=FIVE
+javarush.level.filter=ONE
