--- a/JavaRushPlugin.properties
+++ b/JavaRushPlugin.properties
@@ -1,19 +1,11 @@
-<<<<<<< HEAD
-#Wed Oct 25 19:43:38 EEST 2017
-javarush.query.filter=
-javarush.quest.filter=QUEST_JAVA_COLLECTIONS
-javarush.status.filter=ASSIGNED
-javarush.last.task.key=com.javarush.task.task31.task3112
-javarush.last.task.path=/home/rusiashka/JavaRushTasks/4.JavaCollections/src/com/javarush/task/task31/task3112
-javarush.user.secretkey=1ad56544-0337-4989-9f61-a48066ee067c
-javarush.level.filter=ALL
-=======
-#Wed Oct 25 15:29:45 EEST 2017
-javarush.query.filter=
-javarush.quest.filter=QUEST_JAVA_COLLECTIONS
-javarush.status.filter=ASSIGNED
-javarush.last.task.key=com.javarush.task.task31.task3111
-javarush.last.task.path=C\:/Users/Rusiashka/IdeaProjects/JavaRushTasks/4.JavaCollections/src/com/javarush/task/task31/task3111
-javarush.user.secretkey=1ad56544-0337-4989-9f61-a48066ee067c
+#Thu Oct 26 14:52:31 EEST 2017
 javarush.level.filter=ONE
->>>>>>> 7defc761c64c11807484c27048e1438b8af48d88
+>>>>>>>=7defc761c64c11807484c27048e1438b8af48d88
+<<<<<<<=HEAD
+javarush.last.task.key=com.javarush.task.task31.task3103
+javarush.status.filter=ASSIGNED
+javarush.query.filter=
+javarush.user.secretkey=1ad56544-0337-4989-9f61-a48066ee067c
+javarush.last.task.path=/home/rusiashka/JavaRushTasks/4.JavaCollections/src/com/javarush/task/task31/task3103
+=\=\=\=\=\=\=
+javarush.quest.filter=QUEST_JAVA_COLLECTIONS
